refactor: Collection for문 처리를 stream 처리로 변경